fix update bugs

--- a/src/css/contagem.css
+++ b/src/css/contagem.css
@@ -45,12 +45,14 @@
 
 .header__nav ul a{
     display: block;
-    padding: 20px 30px;
+    padding: 20px 10px;
     color: var(--color);
     font-size: 1em;
     text-decoration: none;
     font-weight: normal;
     letter-spacing: 1px;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
 }
 
 .header__nav ul a:hover{
@@ -98,7 +100,7 @@
     left: 0;
     min-width: 30%;
     height: 100vh;
-    padding: 5% 0px 5% 0px;
+    padding: 5% 0px 5% 30px;
     background-color: var(--background-boxs);
 
 }
@@ -384,7 +386,7 @@ p{
         left: 0;
         min-width:100%;
         height: 100vh;
-        padding: 10% 0px;
+        padding: 10% 0px 10% 30px;
         background-color: var(--background-boxs);
     
     }
