--- a/src/css/calculadora.css
+++ b/src/css/calculadora.css
@@ -248,6 +248,22 @@
     color: var(--color);
 }
 
+.tutorial--hora{
+    width: 50%;
+    padding: 0px 30px;
+    min-height: 200px;
+    background-color: var(--background-boxs);
+    border-radius: 5px;
+
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+    gap: 0.9em;
+
+    color: var(--color);
+}
+
 h3{
     font-size: 1.2em;
     font-weight: 500;
@@ -371,7 +387,12 @@ p{
         padding: 40px 20px;
     }
 
-    .tutorial p{
+    .tutorial--hora{
+        width: 80%;
+        padding: 40px 20px;
+    }
+
+     p{
         width: 100%;
         font-size: 0.8em;
     }
@@ -424,4 +445,7 @@ p{
         min-width: 90%;
     }
     
+    .tutorial--hora{
+        width: 90%;
+    }
 }
